--- a/squirrel.custom.yaml
+++ b/squirrel.custom.yaml
@@ -4,7 +4,11 @@ patch:
 
   # 以下软件默认英文模式
   app_options:
+    com.microsoft.Outlook:
+      ascii_mode: true
     com.github.GitHubClient:
+      ascii_mode: true
+    com.google.Chrome:
       ascii_mode: true
     com.microsoft.VSCode:
       ascii_mode: true
@@ -56,11 +60,11 @@ patch:
       ascii_mode: true
     com.eusoft.eudic:
       ascii_mode: true
-      
+
 
 # 如果想要修改皮肤，直接更改 color_scheme 的值即可
   style:
-    color_scheme: apathy
+    color_scheme: solarized_rock
 
   preset_color_schemes:
     mojave_dark:
